[package]
name = "pomo-event"
version = "0.1.0"
authors = ["Amiel Martin <amiel.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.36"

